[package]
name = "bme680"
version = "0.1.1"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2cdev = "0.4"
log = "0.4"

[build-dependencies]
bindgen = "0.51"
cc = "1"